--- a/translations/policy+intl-icu.fr.yml
+++ b/translations/policy+intl-icu.fr.yml
@@ -1,39 +1,38 @@
-title: 'Politique de confidentialité de Captain Coaster'
+title: 'Termes & Conditions'
 privacy:
-    title: 'Politique de confidentialité'
-    text: '<p>Captain Coaster collecte les données personnelles suivantes : </p>
+    title: 'Politique de Confidentialité'
+    text: '<p>Cette politique de confidentialité explique comment notre site web utilise les données personnelles que nous collectons lorsque vous utilisez Captain Coaster.</p>
+           <p>Captain Coaster collecte les données suivantes lors de votre inscription :</p>
            <ul>
-               <li>Nom et prénom,</li>
-               <li>Adresse email,</li>
-               <li>Photo publique de profil,</li>
-               <li>ID unique,</li>
-           </ul>
-           <p>provenant du compte Facebook ou Google associés à la connexion lors de la création du compte.</p>
-           <p>Ces données sont conservées dans des conditions sécurisées pendant toute la durée d''utilisation du service, selon les moyens actuels de la technique, dans le respect des dispositions de la Loi Informatique et Libertés du 6 janvier 1978.</p>
-           <p>Elles ne sont partagées avec aucun tiers et servent uniquement dans le cadre de certaines fonctionnalités du site, ainsi que pour la création d’un espace personnel.</p>
-           <p>Conformément à cette loi, les internautes disposent d''un droit:</p>
-           <ul>
-           <li>d''interrogation - afin de recevoir par email toutes les données collectées sur l''utilisateur,</li>
-           <li>d''accès et de rectification - en cas d''informations erronnées et/ou manquantes,</li>
-           <li>de suppression définitive du compte et de toutes ses données,</li>
-           </ul>
-           <p>Pour ce faire, l''utilisateur doit nous contacter via le <a href="{link_href}">formulaire de contact</a> du site. La modification interviendra dans des délais raisonnables à compter de la réception de la demande de l''utilisateur.</p>'
+               <li>Prénom et nom,</li>
+               <li>Adresse e-mail,</li>
+               <li>Photo de profil public (uniquement lors de l''authentification Google)</li>
+              </ul>
+              <p>Nous conserverons vos données aussi longtemps que vous utiliserez notre service, dans un stockage sécurisé et en respectant la loi française "Loi Informatique et Libertés du 6 janvier 1978".</p>
+              <p>Elles ne sont jamais partagées avec quiconque et sont utilisées uniquement pour créer un compte et pour certaines fonctionnalités de Captain Coaster.</p>
+              <p>Chaque utilisateur a droit aux éléments suivants :</p>
+              <ul>
+              <li>Le droit d''accès - Vous avez le droit de nous demander des copies de vos données personnelles, envoyées par e-mail,</li>
+              <li>Le droit de rectification - Vous avez le droit de demander la correction de toute information que vous estimez inexacte ou manquante,</li>
+              <li>Le droit à l''effacement - Vous avez le droit de demander que nous effacions vos données personnelles.</li>
+              </ul>
+              <p>Si vous avez des questions sur la politique de confidentialité de Captain Coaster, sur les données que nous détenons à votre sujet, ou si vous souhaitez exercer l''un de vos droits de protection des données, veuillez <a href="{link_href}">nous contacter</a>.</p>'
+cookies:
+    title: 'Politique de Cookies'
+    text: '<p>Les cookies sont de petits fichiers stockés sur l''ordinateur d''un utilisateur pour simplifier votre vie.</p>
+              <p>Captain Coaster utilise un cookie de session pour vous rappeler lorsque vous vous connectez. Cela évite de vous connecter à chaque fois que vous nous rendez visite. Nous utilisons également un cookie Google Analytics pour les statistiques.</p>'
 terms:
-    title: 'Conditions d''utilisation'
-    text: '<p>Captain Coaster est un site communautaire non-officiel pour les passionnés de montagnes russes et parcs d’attractions. Il n’est affilié à aucun parc, constructeur, ou société de l’industrie des loisirs. Il est géré par des bénévoles, remerciés uniquement par la gratitude des membres.</p>
-           <p>Captain Coaster est d’accès libre et gratuit à tout internaute. Toutefois, il faut créer un compte en ligne afin de pouvoir partager son expérience (notes, tags, avis) sur le site : il suffit d''avoir un compte Facebook ou Google <b>valide</b>. <b>Un seul compte par personne est autorisé</b>.</p>
-           <p>Tous les espaces communautaires sont relus par des modérateurs de l’équipe et peuvent être modifiés ou supprimés. Certains comptes peuvent être désactivés temporairement ou définitivement.</p>'
+    title: 'Utilisation de Captain Coaster'
+    text: '<p>Captain Coaster est un site web communautaire pour les passionnés de parcs d''attractions et de montagnes russes. Il n''est affilié à aucun parc, constructeur ou société de l''industrie du loisir.</p>
+              <p>Il est ouvert à tous : il vous suffit de vous connecter pour partager votre expérience sur les montagnes russes (notes, tags, avis). Pour accéder à ces fonctionnalités, vous aurez besoin d''un compte Google ou d''une adresse e-mail <b>valide</b>. <b>Il est formellement interdit d''avoir plusieurs comptes</b> et cela entraînera une exclusion permanente.</p>
+              <p>Tous les champs participatifs sont examinés par les modérateurs de l''équipe qui se réservent le droit de modifier ou de supprimer tout message. Les utilisateurs ne respectant pas ces règles peuvent être exclus temporairement ou définitivement.</p>'
 hosting:
     title: 'Hébergement'
-    text: 'Captain Coaster est hébergé par Amazon Web Services, dont le siège social est à Seattle, Washington, Etats-Unis. Nos serveurs sont localisés à Paris, France.'
+    text: 'Captain Coaster est hébergé par Amazon Web Services, dont le siège est à Seattle, Washington, aux États-Unis. Nos serveurs sont situés à Paris, en France.'
 copyright:
-    title: 'Droits d''auteur'
-    text: '<p>Le logo "Captain Coaster" et ses dérivés ont été créés par Benjamin R., qui en a donné les droits exclusifs d''utilisation et modification à l''équipe du site. Toute reproduction est interdite sans son accord écrit.</p>
-           <p>Tous les utilisateurs peuvent envoyer des photos sur le site, accompagnées du crédit. Si vous en êtes l''auteur et ne souhaitez pas les voir apparaître sur Captain Coaster, n''hésitez pas à <a href="{link_href}">nous contacter</a> pour demander leur suppression.</p>'
-cookies:
-    title: 'Cookies'
-    text: '<p>Les cookies sont des petits fichiers informatiques que nous sauvegardons sur votre ordinateur pour vous simplifier la vie.</p>
-           <p>Captain Coaster utilise notamment un cookie de connexion qui se souvient de votre session lorsque vous vous connectez. Vous n''avez ainsi pas à vous reconnecter à chacune de vos visites. Nous utlisons aussi un cookie Google Analytics à des fins statistiques.</p>'
+    title: 'Droits d''Auteur'
+    text: '<p>Le logo "Captain Coaster" appartient à Benjamin R., Captain Coaster a le droit exclusif de l''utiliser et de le modifier. Toute reproduction sans autorisation est interdite.</p>
+              <p>Chaque utilisateur peut télécharger des photos sur Captain Coaster avec son crédit. Si vous êtes propriétaire d''une photo que vous ne souhaitez pas partager sur Captain Coaster, veuillez <a href="{link_href}">nous contacter</a> et la photo sera supprimée dès que possible.</p>'
 contact:
-    title: 'Contact'
-    text: 'Une question, une remarque sur ces conditions ou le site en général ? <a href="{link_href}">Contactez nous</a>, on ne mord pas.'
+    title: 'Contactez-nous'
+    text: '<b>Des questions ou des remarques ? <a href="{link_href}">Contactez-nous</a>, on mord pas !</b>'
