--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -299,7 +299,7 @@ login:
     terms: 'By continuing, you confirm that you accept our <a href="{link_path}">Terms &amp; Conditions</a>'
     email:
         title: 'Sign in to Captain Coaster'
-        h1: 'Hold on tight!'
+        h1: 'Ready to dispatch!'
         paragraph1: 'To sign in to Captain Coaster, click the button below. This link will expire in 15 minutes.'
         button: 'Sign in'
         paragraph2: 'You received this email because you are trying to sign in to Captain Coaster. If you are not sure why you are receiving this, please contact us by replying to this email.'
@@ -307,9 +307,9 @@ login:
     account_disabled: 'Your email {email} has not been verified. Please <a href="{link_path}">register</a> or click on the link you received after registering to activate your account.'
 
 register:
-    title: 'Register'
+    title: 'Create an account'
     subtitle: 'Create an account and verify it by email'
-    send_link: 'Send the confirmation link'
+    send_link: 'Créer un compte'
     link_sent: 'Confirmation link sent to {email}. Please check your email and click on the link to activate your account.'
     form:
         email: 'Email'
