--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -1,3 +1,9 @@
+# Define languages
+fr: Français
+en: English
+es: Español
+de: Deutsch
+
 app:
     name: 'Captain Coaster'
     title:
@@ -281,14 +287,34 @@ footer:
     terms: 'Datenschutzrichtlinie'
 
 login:
-    title: 'Anmeldung bei Captain Coaster'
-    facebook_connect: 'Anmeldung mit Facebook'
-    google_connect: 'Anmeldung mit Google'
-    info:
-        title: 'Blaue Pille oder rote Pille?'
-        text: 'Du kannst dich mit deinem Facebook- oder Google-Konto anmelden. Wir erfassen lediglich deinen Namen, deine E-Mail-Adresse und dein Profilbild. Wir veröffentlichen nichts auf Facebook.'
-    already_connected_as: 'Bereits angemeldet als'
-    logout: 'Abmelden?'
+    title: 'Anmelden bei Captain Coaster'
+    subtitle: 'Sende einen Anmelde-Link an deine E-Mail-Adresse'
+    send_link: 'Anmelde-Link senden'
+    redirect_to_register: 'Neu bei Captain Coaster? <a href="{link_path}">Konto erstellen</a>'
+    or_sign_in_with: 'oder'
+    connect_with_google: 'Mit Google anmelden'
+    terms: 'Durch die Fortsetzung bestätigen Sie, dass Sie unsere <a href="{link_path}">Allgemeinen Geschäftsbedingungen</a> akzeptieren.'
+    email:
+        title: 'Anmelden bei Captain Coaster'
+        h1: 'Bereit zum Versand!'
+        paragraph1: 'Um sich bei Captain Coaster anzumelden, klicken Sie auf die Schaltfläche unten. Dieser Link verfällt in 15 Minuten.'
+        button: 'Anmelden'
+        paragraph2: 'Sie haben diese E-Mail erhalten, weil Sie versuchen, sich bei Captain Coaster anzumelden. Wenn Sie nicht sicher sind, warum Sie diese E-Mail erhalten, kontaktieren Sie uns bitte, indem Sie auf diese E-Mail antworten.'
+    link_sent: 'Wenn ein Konto mit {email} verknüpft ist, erhalten Sie einen Anmelde-Link. Klicken Sie auf den Link, um sich anzumelden.'
+    account_disabled: 'Ihre E-Mail-Adresse {email} wurde nicht verifiziert. Bitte <a href="{link_path}">registrieren</a> Sie sich oder klicken Sie auf den Link, den Sie nach der Registrierung erhalten haben, um Ihr Konto zu aktivieren.'
+
+register:
+    title: 'Konto erstellen'
+    subtitle: 'Ein Konto erstellen und per E-Mail bestätigen'
+    send_link: 'Konto erstellen'
+    link_sent: 'Bestätigungslink an {email} gesendet. Bitte überprüfen Sie Ihre E-Mail und klicken Sie auf den Link, um Ihr Konto zu aktivieren.'
+    form:
+        email: 'E-Mail'
+        first_name: 'Vorname'
+        last_name: 'Nachname'
+        submit: 'Konto erstellen'
+    email:
+        title: 'Bitte bestätigen Sie Ihre E-Mail-Adresse'
 
 contact:
     title: 'Kontaktiere uns'
