email registration & login (#117)
* first step: login link

* Email login / ajout page register (#121)

* Adding roles to user crud for super admin

* First step register user

* Adding check on login if account not enabled

* Modifying register html page & confirmation email

* typo & link from login to register

* Add message confirmation sent

* fix: php cs fixer

* php cs fixer 2

* php cs fixer 3

* save work

* add rate limiter & user checker

* remove unused imports

* update translations

* more translations

* last fixes

---------

Co-authored-by: shARPII <philippe.grad@gmail.com>

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -1,3 +1,9 @@
+# Define languages
+fr: Français
+en: English
+es: Español
+de: Deutsch
+
 app:
     name: 'Captain Coaster'
     title:
@@ -264,6 +270,7 @@ navbar:
     logout: 'Abmelden'
     tops: 'Meine Tops'
     my_map: 'Meine Karte'
+    login: 'Anmelden'
 
 sidebar:
     index: 'Home'
@@ -281,14 +288,39 @@ footer:
     terms: 'Datenschutzrichtlinie'
 
 login:
-    title: 'Anmeldung bei Captain Coaster'
-    facebook_connect: 'Anmeldung mit Facebook'
-    google_connect: 'Anmeldung mit Google'
-    info:
-        title: 'Blaue Pille oder rote Pille?'
-        text: 'Du kannst dich mit deinem Facebook- oder Google-Konto anmelden. Wir erfassen lediglich deinen Namen, deine E-Mail-Adresse und dein Profilbild. Wir veröffentlichen nichts auf Facebook.'
-    already_connected_as: 'Bereits angemeldet als'
-    logout: 'Abmelden?'
+    title: 'Anmelden bei Captain Coaster'
+    subtitle: 'Sende einen Anmelde-Link an deine E-Mail-Adresse'
+    send_link: 'Anmelde-Link senden'
+    redirect_to_register: 'Neu bei Captain Coaster? <a href="{link_path}">Konto erstellen</a>'
+    or_sign_in_with: 'oder'
+    connect_with_google: 'Mit Google anmelden'
+    facebook_login_disclaimer: 'Ehemalige Facebook-Login-Nutzer, bitte melden Sie sich mit der E-Mail-Adresse an, die mit Ihrem Facebook-Konto verknüpft ist'
+    terms: 'Durch die Fortsetzung bestätigen Sie, dass Sie unsere <a href="{link_path}">Allgemeinen Geschäftsbedingungen</a> akzeptieren.'
+    email:
+        title: 'Anmelden bei Captain Coaster'
+        h1: 'Bereit zum Versand!'
+        paragraph1: 'Um sich bei Captain Coaster anzumelden, klicken Sie auf die Schaltfläche unten. Dieser Link verfällt in 15 Minuten.'
+        button: 'Anmelden'
+        paragraph2: 'Sie haben diese E-Mail erhalten, weil Sie versuchen, sich bei Captain Coaster anzumelden. Wenn Sie nicht sicher sind, warum Sie diese E-Mail erhalten, kontaktieren Sie uns bitte, indem Sie auf diese E-Mail antworten.'
+    link_sent: 'Wenn ein Konto mit {email} verknüpft ist, erhalten Sie einen Anmelde-Link. Klicken Sie auf den Link, um sich anzumelden.'
+    account_disabled: 'Ihre E-Mail-Adresse {email} wurde nicht verifiziert. Bitte <a href="{link_path}">registrieren</a> Sie sich oder klicken Sie auf den Link, den Sie nach der Registrierung erhalten haben, um Ihr Konto zu aktivieren.'
+
+register:
+    title: 'Ein Konto erstellen'
+    subtitle: 'Bitte füllen Sie alle untenstehenden Felder aus'
+    link_sent: 'Konto erstellt! Bitte überprüfen Sie Ihre E-Mail ({email}) und klicken Sie auf den Link, um Ihr Konto zu aktivieren.'
+    form:
+        email: 'E-Mail'
+        first_name: 'Vorname'
+        last_name: 'Nachname'
+        submit: 'Ein Konto erstellen'
+    email:
+        title: 'Bestätigen Sie Ihre E-Mail'
+        h1: 'Willkommen an Bord!'
+        paragraph1: 'Um Captain Coaster zu nutzen, klicken Sie auf den Bestätigungsbutton. Dieser Link ist gültig für'
+        button: 'Aktivieren'
+        paragraph2: 'Sie haben diese E-Mail erhalten, weil Sie ein Konto bei Captain Coaster erstellt haben. Wenn Sie nicht sicher sind, warum Sie diese Nachricht erhalten, kontaktieren Sie uns bitte, indem Sie auf diese E-Mail antworten.'
+    email_verified: 'Ihre E-Mail {email} wurde verifiziert. Willkommen bei Captain Coaster!'
 
 contact:
     title: 'Kontaktiere uns'
