--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -269,6 +269,7 @@ rating:
 navbar:
     profile: 'My profile'
     rating: 'My ratings'
+    login: 'Sign in'
     logout: 'Logout'
     tops: 'My tops'
     my_map: 'My map'
@@ -283,20 +284,45 @@ sidebar:
     review: 'Coaster Reviews'
     contact: 'Get in touch'
     logout: 'Logout'
-    login: 'Login'
+    login: 'Sign in'
 
 footer:
     terms: 'Privacy Policy'
 
 login:
-    title: 'Login to Captain Coaster'
-    facebook_connect: 'Login with Facebook'
-    google_connect: 'Login with Google'
-    info:
-        title: 'Blue pill or red pill ?'
-        text: 'You can login using your Facebook or Google account. We only gather your name, email and profile picture. We do not publish on Facebook.'
-    already_connected_as: 'Already logged in as'
-    logout: 'Logout ?'
+    title: 'Sign in to Captain Coaster'
+    subtitle: 'Send a login link to your email'
+    send_link: 'Send login link'
+    redirect_to_register: 'New to Captain Coaster? <a href="{link_path}">Create an account</a>'
+    or_sign_in_with: 'or'
+    connect_with_google: 'Connect with google'
+    facebook_login_disclaimer: 'Former Facebook login users, please sign in using the email address associated to your Facebook account'
+    terms: 'By continuing, you confirm that you accept our <a href="{link_path}">Terms &amp; Conditions</a>'
+    email:
+        title: 'Sign in to Captain Coaster'
+        h1: 'Ready to dispatch!'
+        paragraph1: 'To sign in to Captain Coaster, click the button below. This link will expire in 15 minutes.'
+        button: 'Sign in'
+        paragraph2: 'You received this email because you are trying to sign in to Captain Coaster. If you are not sure why you are receiving this, please contact us by replying to this email.'
+    link_sent: 'If an account is associated with {email}, you will receive a login link. Click on the link to sign in'
+    account_disabled: 'Your email {email} has not been verified. Please <a href="{link_path}">register</a> or click on the link you received after registering to activate your account.'
+
+register:
+    title: 'Create an account'
+    subtitle: 'Please fill in all the fields below'
+    link_sent: 'Account created! Please check your email ({email}) and click on the link to activate your account.'
+    form:
+        email: 'Email'
+        first_name: 'First Name'
+        last_name: 'Last Name'
+        submit: 'Create an account'
+    email:
+        title: 'Confirm your email'
+        h1: 'Welcome aboard!'
+        paragraph1: 'To use Captain Coaster, click the verification button. This link is valid for'
+        button: 'Activate'
+        paragraph2: 'You received this email because you created an account on Captain Coaster. If you are not sure why you are receiving this, please contact us by replying to this email.'
+    email_verified: 'Your email {email} has been verified. Welcome to Captain Coaster!'
 
 contact:
     title: 'Get in touch'
@@ -353,11 +379,12 @@ error:
     403:
         title: 'Access forbidden'
         message: 'You are not allowed to access this page'
+    429:
+        title: 'Too many requests'
+        message: 'Please wait a few minutes'
     generic:
-        title: 'Oops, an error occurred !'
+        title: 'An error occurred'
         message: 'An error occurred. Contact us if the problem persists'
-
-User account is disabled.: 'This account is disabled because it did not comply with our policies. Contact us to get more information.'
 
 missing:
     step1:
