--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -70,7 +70,7 @@ image_upload:
     form:
         file:
             label: 'Choisis une photo'
-            helper: 'Le fichier doit être au format JPEG et faire moins de 13Mo. Une image trop petite peut être rejetée.'
+            helper: 'Le fichier doit être au format JPEG et faire moins de 15Mo. Une image trop petite pourra être rejetée.'
         credit:
             label: 'Qui a pris cette photo ?'
             helper: 'Vous ne pouvez envoyer des photos que si vous êtes l''auteur ou si vous avez obtenu l''autorisation de l''auteur original.'
