[#123] - Display park's map link for all parks

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -41,6 +41,7 @@ coaster:
     infos:
         title: '{name} Merkmale'
         closeParksTitle: 'Beste Freizeitparks nahe {parkName}'
+        closeParksNone: 'Keine Freizeitparks nahe {parkName} gefunden.'
         closeParksLink: 'Zeige {parkName} auf der Karte'
         status: 'Status'
         park: 'Park'
