--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -33,6 +33,7 @@ coaster:
     infos:
         title: 'Características de {name}'
         closeParksTitle: 'Los mejores parques de atracciones cerca de {parkName}'
+        closeParksNone: 'No se han encontrado parques de atracciones cerca de {parkName}.'
         closeParksLink: 'Ver {parkName} en el mapa'
         status: 'Estatus'
         park: 'Parque de atracciones'
