--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -37,6 +37,7 @@ coaster:
     infos:
         title: 'Caractéristiques de {name}'
         closeParksTitle: 'Les meilleurs parcs d''attractions proches de {parkName}'
+        closeParksNone: 'Aucun parc d''attractions proche de {parkName} trouvé'
         closeParksLink: 'Visualiser {parkName} sur la carte'
         status: 'Statut'
         park: 'Parc'
